--- a/CentOS/Dockerfile
+++ b/CentOS/Dockerfile
@@ -34,8 +34,8 @@ cp -r /var/log/glusterfs/* /var/log/glusterfs_bkp; \
 sed -i.save -e "s#udev_sync = 1#udev_sync = 0#" -e "s#udev_rules = 1#udev_rules = 0#" -e "s#use_lvmetad = 1#use_lvmetad = 0#" /etc/lvm/lvm.conf; \
 sed 's/default=22/default=2222/g' -i /usr/libexec/glusterfs/python/syncdaemon/gsyncd.py; \
 echo -e  "Host * \n     Port 2222 \n     IdentityFile /var/lib/glusterd/geo-replication/secret.pem" >> /etc/ssh/ssh_config; \
-sed 's#.ssh/authorized_keys#.ssh/authorized_keys /var/lib/glusterd/geo-replication/authorized_keys#g' -i /etc/ssh/sshd_config; 
-
+sed 's#.ssh/authorized_keys#.ssh/authorized_keys /var/lib/glusterd/geo-replication/authorized_keys#g' -i /etc/ssh/sshd_config; \
+sed 's#/nonexistent/gsyncd#/usr/libexec/glusterfs/gsyncd#g' -i /var/lib/glusterd/geo-replication/gsyncd_template.conf;
 
 VOLUME [ "/sys/fs/cgroup" ]
 ADD gluster-setup.service /etc/systemd/system/gluster-setup.service
