another dirty hack

--- a/CentOS/Dockerfile
+++ b/CentOS/Dockerfile
@@ -35,6 +35,7 @@ sed -i.save -e "s#udev_sync = 1#udev_sync = 0#" -e "s#udev_rules = 1#udev_rules 
 sed 's/default=22/default=2222/g' -i /usr/libexec/glusterfs/python/syncdaemon/gsyncd.py; \
 echo -e  "Host * \n     Port 2222 \n     IdentityFile /var/lib/glusterd/geo-replication/secret.pem" >> /etc/ssh/ssh_config; \
 sed 's#.ssh/authorized_keys#.ssh/authorized_keys /var/lib/glusterd/geo-replication/authorized_keys#g' -i /etc/ssh/sshd_config; \
+ln -s /var/lib/glusterd/geo-replication/authorized_keys ~/.ssh/authorized_keys ; \
 ln -s /usr/libexec/glusterfs/ /nonexistent;
 
 VOLUME [ "/sys/fs/cgroup" ]
